fix broken instagram post & rogue css

--- a/src/main.sass
+++ b/src/main.sass
@@ -162,6 +162,8 @@ canvas
     border: 4px solid #333
     box-shadow: $box-shadow
     border-radius: $border-radius
+  .quote
+    color: #444
 
 footer.dev-info
   position: relative
@@ -174,7 +176,8 @@ footer.dev-info
     margin: 1rem
     height: 4rem
   .last-modified
-    color: grey
+    color: #333
+    font-family: monospace
 
 .content
   &-block
