--- a/src/styles/layout.sass
+++ b/src/styles/layout.sass
@@ -49,7 +49,7 @@ img
   h1, .h1
     font-size: 3em
   .row
-    margin: 0 -0.5rem
+    margin: 0 0rem
   .padding-1x
     padding: 0.5rem
   .padding-2x
